fix (footer): Update first column's spacing

--- a/assets/styles/refresh/components/_footer.scss
+++ b/assets/styles/refresh/components/_footer.scss
@@ -7,6 +7,7 @@
   justify-content: space-around;
 
   &__logo {
+    margin: -8px 0;
     display: block;
     background: url(/design/sparkeats_logomark.svg) center no-repeat;
     width: 12em;
